# ado_pipeline_helper

./: .ado_pipeline_helper.yml  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: cicd.yml
src/ado_pipeline_helper/: __init__.py  cli.py  client.py  config.py  expression.py  parameters.py  utils.py  yaml_loader.py
src/ado_pipeline_helper/resolver/: expression.py  parameters.py  yaml_loader.py
tests/: conftest.py  test_cli.py  test_expressions.py  test_pipelines.py  test_utils.py  test_yaml_loader.py
tests/test_pipelines/: test5variable.yml  test_pipeline_1.yml  test_pipeline_2_extends.yml  test_pipeline_3_nested_templates.yml  test_pipeline_4_parameters.yml
tests/test_pipelines/templates/jobs/: nested.yml  parameters.yml  simple.yml
tests/test_pipelines/templates/stages/: complex.yml  many_parameters.yml  nested.yml  simple.yml  simple2.yml  simple_parameter.yml
tests/test_pipelines/templates/steps/: parameters.yml  parameters_quotes.yml  parameters_shorthand.yml  simple.yml
tests/test_pipelines/templates/variables/: simple.yml  simple_list.yml  variables_with_parameter.yml
